# agent-trust-control-plan-evals

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
app/: main.py
app/core/: config.py
app/data/: corpus.json  golden_eval_set.jsonl
app/models/: schemas.py
app/routes/: api.py
app/services/: evaluator.py  generator.py  identity.py  metrics.py  pipeline.py  policy.py  retrieval.py  review_queue.py  tracing.py
docs/: architecture.md
docs/benchmark_cards/: golden-eval-set.md  retrieval-corpus.md
frontend/: app.js  index.html  style.css
scripts/: reset_runtime.py  run_benchmarks.py
tests/: test_api.py  test_benchmarks.py  test_pipeline.py  test_policy.py
